force-app/main/default/objects/redwing__Pair__c/redwing__Pair__c.object-meta.xml
<CustomObject>
    <label>Pair</label>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Pair Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pairs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>