force-app/main/default/objects/redwing__Pair__c/fields/redwing__Order__c.field-meta.xml
<CustomField>
    <fullName>redwing__Order__c</fullName>
    <inlineHelpText>Defines the order the pair will be displayed for users.</inlineHelpText>
    <label>Order</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>