force-app/main/default/objects/redwing__Pair__c/fields/redwing__Part_1__c.field-meta.xml
<CustomField>
    <fullName>redwing__Part_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Related Pair Part 1.</inlineHelpText>
    <label>Part 1</label>
    <referenceTo>redwing__Pair_Part__c</referenceTo>
    <relationshipLabel>Pair Parts 1</relationshipLabel>
    <relationshipName>Pairs_1</relationshipName>
    <type>Lookup</type>
</CustomField>