force-app/main/default/objects/redwing__Pair__c/fields/redwing__Part_2__c.field-meta.xml
<CustomField>
    <fullName>redwing__Part_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Related Pair Part 2.</inlineHelpText>
    <label>Part 2</label>
    <referenceTo>redwing__Pair_Part__c</referenceTo>
    <relationshipLabel>Pair Parts 2</relationshipLabel>
    <relationshipName>Pairs_2</relationshipName>
    <type>Lookup</type>
</CustomField>