force-app/main/default/objects/redwing__Pair__c/fields/redwing__Question_Bank_Question__c.field-meta.xml
<CustomField>
    <fullName>redwing__Question_Bank_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Related Question Bank Question.</inlineHelpText>
    <label>Question Bank Question</label>
    <referenceTo>redwing__Question_Bank_Question__c</referenceTo>
    <relationshipLabel>Pairs</relationshipLabel>
    <relationshipName>Pairs</relationshipName>
    <type>Lookup</type>
</CustomField>